[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "poppy-gw"
authors = [
    {name = "Michael J. Williams", email = "michaeljw1@googlemail.com"},
]
description = "Gravitational-wave Posterior Post-processing in Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "poppy",
]

dynamic = ["version"]

[project.optional-dependencies]
jax = [
    "jax",
    "jaxlib",
    "flowjax"
]
gwflow = [
    "gwflow",
    "zuko",
]
bilby = [
    "poppy-bilby",
    "bilby>=2.3.0",
]
test = [
    "pytest",
]

[tool.setuptools_scm]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
extend-select = ["I"]

[project.entry-points."poppy.flows"]
gwflow = "gw_poppy.flows:GWFlow"
